--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">KotlinMVVM</string>
     <string name="action_settings">Settings</string>
+    <string name="news_title">Waymo teams up with Walmart for self-driving shuttles</string>
+    <string name="news_time">1h ago</string>
 </resources>
